Added popup to show "VIP benefits" and a link in the "show online status" trial popup.

--- a/rs/static/css/user_main.css
+++ b/rs/static/css/user_main.css
@@ -548,5 +548,5 @@ td.cl-registration-big-prompt-td {
 }
 /* *** End login customizations *** */
 
-a#id-show_online_status_anchor {text-decoration: underline; color:#000 ; outline: none; font-weight: bold; } /* #B857AB close to purple */
-a#id-show_online_status_anchor:hover {text-decoration: underline; color:#EB485D ; outline: none;  font-weight: bold;} /* #EB485D soft RED */
+a.cl-dialog_anchor {text-decoration: underline; color:#000 ; outline: none; font-weight: bold; } /* #B857AB close to purple */
+a.cl-dialog_anchor:hover {text-decoration: underline; color:#EB485D ; outline: none;  font-weight: bold;} /* #EB485D soft RED */
