--- a/rs/templates/user_main_helpers/become_a_vip.html
+++ b/rs/templates/user_main_helpers/become_a_vip.html
@@ -26,16 +26,15 @@
 # limitations under the License.
 ################################################################################
 -->
-    <br><br>
-    <div class="grid_9 alpha omega cl-divider-line"></div>
 
-    <div class="grid_9 alpha omega cl-left-text cl-text-large-format">
+
+    <div class="cl-left-text cl-text-large-format">
     <br><strong>
         {% blocktrans with app_name as app_name %}If you like {{ app_name }}, consider becoming a VIP member{% endblocktrans %}<br><br>
     </strong>
     </div>
 
-    <div class="grid_9 alpha omega ">
+    <div>
         <p>
 
         {% blocktrans %}VIP benefits include{% endblocktrans %}:
