--- a/rs/templates/main_container.html
+++ b/rs/templates/main_container.html
@@ -126,7 +126,11 @@ $(document).ready(function() {
                     {% endif %}
 
                     {% if guest_user_data_fields.registered_user_bool %}
+                    <br><br>
+                    <div class="grid_9 alpha omega cl-divider-line"></div>
+                    <div class="grid_9 alpha omega">
                         {% include "user_main_helpers/become_a_vip.html" %}
+                    </div>
                     {% endif %}
 
 
