--- a/rs/templates/user_main_helpers/paypal_button.html
+++ b/rs/templates/user_main_helpers/paypal_button.html
@@ -69,21 +69,25 @@
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="{{ paypal_data.paypal_en_button_id }}">
             <table>
-                <tr><td><input type="hidden" name="on0" value="VIP"></td>
-                <td class="cl-paypal-td"><select name="os0">
-                <option selected value="50 Euros">€50.00 - 1 year</option>
-                <option value="40 Euros">€40.00 - 9 months</option>
-                <option value="30 Euros">€30.00 - 6 months</option>
-                <option value="20 Euros">€20.00 - 3 months</option>
-                <option value="10 Euros">€10.00 - 1 month</option>
-            </select> </td>
+                <tr>
+                    <td><input type="hidden" name="on0" value="VIP"></td>
+                    <td class="cl-paypal-td">
+                        <select name="os0">
+                            <option selected value="50 Euros">€50.00 - 1 year</option>
+                            <option value="40 Euros">€40.00 - 9 months</option>
+                            <option value="30 Euros">€30.00 - 6 months</option>
+                            <option value="20 Euros">€20.00 - 3 months</option>
+                            <option value="10 Euros">€10.00 - 1 month</option>
+                        </select>
+                    </td>
 
-            <td class="cl-paypal-td"><input type="hidden" name="currency_code" value="EUR">
-                <input id="id-paypal-purchase" type="submit" name="submit" value="Purchase">
-            </td>
-            </tr>
+                    <td class="cl-paypal-td">
+                        <input id="id-paypal-purchase" type="submit" name="submit" value="Purchase">
+                    </td>
+                </tr>
 
             </table>
+            <input type="hidden" name="currency_code" value="EUR">
 
         </form>
 
@@ -100,20 +104,22 @@
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="{{ paypal_data.paypal_es_button_id }}">
             <table>
-            <tr><td>
-                <tr><td><input type="hidden" name="on0" value="VIP"></td>
-                <td class="cl-paypal-td"><select name="os0">
-                <option selected value="50 Euros">€50.00 - 1 año</option>
-                <option value="40 Euros">€40.00 - 9 meses</option>
-                <option value="30 Euros">€30.00 - 6 meses</option>
-                <option value="20 Euros">€20.00 - 3 meses</option>
-                <option value="10 Euros">€10.00 - 1 mes</option>
+                <tr>
+                    <td><input type="hidden" name="on0" value="VIP"></td>
+                    <td class="cl-paypal-td">
+                        <select name="os0">
+                            <option selected value="50 Euros">€50.00 - 1 año</option>
+                            <option value="40 Euros">€40.00 - 9 meses</option>
+                            <option value="30 Euros">€30.00 - 6 meses</option>
+                            <option value="20 Euros">€20.00 - 3 meses</option>
+                            <option value="10 Euros">€10.00 - 1 mes</option>
+                        </select>
+                    </td>
 
-            </select> </td>
-            <td class="cl-paypal-td">
-                <input id="id-paypal-purchase" type="submit" name="submit" value="Comprar">
-            </td>
-            </tr>
+                    <td class="cl-paypal-td">
+                        <input id="id-paypal-purchase" type="submit" name="submit" value="Comprar">
+                    </td>
+                </tr>
 
             </table>
             <input type="hidden" name="currency_code" value="EUR">
