Modified paypal payment to include additional information in the "custom" field, so that we can more easily track down payments if the IPN system does not correctly notify us that a new payment has been received.

--- a/rs/templates/user_main_helpers/paypal_button.html
+++ b/rs/templates/user_main_helpers/paypal_button.html
@@ -38,7 +38,7 @@
             <form action="https://www.sandbox.paypal.com/cgi-bin/webscr" method="post" target="_blank">
 
                 <input type="hidden" name="notify_url" value="http://{{ request.META.HTTP_HOST }}/paypal/ipn/">
-                <input type="hidden" name="custom" value="{{ paypal_data.owner_uid }}">
+                <input type="hidden" name="custom" value="site:{{ request.META.HTTP_HOST }}; username:{{ paypal_data.username }}; nid:{{ paypal_data.owner_nid }};">
 
                 <input type="hidden" name="cmd" value="_s-xclick">
                 <input type="hidden" name="hosted_button_id" value="{{ paypal_data.paypal_sandbox_button_id }}">
@@ -64,7 +64,7 @@
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
 
             <input type="hidden" name="notify_url" value="http://{{ request.META.HTTP_HOST }}/paypal/ipn/">
-            <input type="hidden" name="custom" value="{{ paypal_data.owner_uid }}">
+            <input type="hidden" name="custom" value="site:{{ request.META.HTTP_HOST }}; username:{{ paypal_data.username }}; nid:{{ paypal_data.owner_nid }};">
 
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="{{ paypal_data.paypal_en_button_id }}">
@@ -99,7 +99,7 @@
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
 
             <input type="hidden" name="notify_url" value="http://{{ request.META.HTTP_HOST }}/paypal/ipn/">
-            <input type="hidden" name="custom" value="{{ paypal_data.owner_uid }}">
+            <input type="hidden" name="custom" value="site:{{ request.META.HTTP_HOST }}; username:{{ paypal_data.username }}; nid:{{ paypal_data.owner_nid }};">
 
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="{{ paypal_data.paypal_es_button_id }}">
