--- a/rs/templates/user_main_helpers/menubar.html
+++ b/rs/templates/user_main_helpers/menubar.html
@@ -87,6 +87,19 @@
                 </ul>
             </li>
 
+
+            <li class="top">
+                <a href="{% url show_profile_views %}"
+                class="top_link">
+                    <span>{% trans "Profile views" %}
+                    {% if primary_user_presentation_data_fields.profile_views_since_last_check %}
+                        [{{ primary_user_presentation_data_fields.profile_views_since_last_check }} {% trans "new" %}]
+                    {% endif %}
+                    </span>
+                </a>
+            </li>
+
+    
             <li class="top">
                 <a href="{% url generate_contacts_display owner_uid=primary_user_presentation_data_fields.owner_uid %}"
                 class="top_link">
