Removed paypal and VIP ugrades from all builds except RS.

--- a/rs/templates/user_main_helpers/become_a_vip.html
+++ b/rs/templates/user_main_helpers/become_a_vip.html
@@ -27,6 +27,7 @@
 ################################################################################
 -->
 
+ {% if SHOW_VIP_UPGRADE_OPTION %}
 
     <div class="cl-left-text cl-text-large-format">
     <br><strong>
@@ -60,3 +61,4 @@
 
     </div> <!-- end grid_9 -->
 
+{% endif %}
