--- a/rs/templates/user_main_helpers/vip_benefits.html
+++ b/rs/templates/user_main_helpers/vip_benefits.html
@@ -1,5 +1,7 @@
 {% load i18n %}
 
+        {% if SHOW_VIP_UPGRADE_OPTION %}
+        
         <ul>
         <li>{% blocktrans with guest_num_new_people_messages_allowed_in_window as free and vip_num_new_people_messages_allowed_in_window as vip %}
                 vip_message_quota {{ vip }} {{ free }}{% endblocktrans %}</li>
@@ -12,3 +14,5 @@
         <li>{% blocktrans %}You can update your email address{% endblocktrans %}</li>
 
         </ul>
+
+        {% endif %}
