Pass "internal" advertisements into templates as html as opposed to file names to include.

--- a/rs/templates/advertising/sidebar.html
+++ b/rs/templates/advertising/sidebar.html
@@ -38,7 +38,7 @@
 
 
     {% for ad in advertising_info.ad_template_list %}
-        {% include ad %}
+        {{ ad|safe }}
         <br><br>
     {% endfor %}
 
