- Fixed error that was causing terms and conditions to be incorrectly displayed in spanish - Removed reference to "Powered by lexalink" - Updaded photo regulations to be more flexible for SwingerPlex - will basically become a fully adult-oriented site.

--- a/rs/templates/user_main_helpers/photos.html
+++ b/rs/templates/user_main_helpers/photos.html
@@ -141,8 +141,10 @@
 
         <strong>{% trans "Rules:" %}</strong>
         <ul>
-            <li>
-                {% trans "No nude photos." %}
+            {% if build_name != "Swinger" %}
+                <li>
+                    {% trans "No nude photos in public. Allowed in private." %}
+            {% endif %}
             <li>
                 {% trans "Only authorized people will have access to your private photos." %}
             <li>
