Modified css on login screen to block out walpaper with css declaration.

--- a/rs/templates/common_wrapper.html
+++ b/rs/templates/common_wrapper.html
@@ -125,9 +125,7 @@
 
 
 
-        <!-- in order to improve responsiveness, we modify the contents inside the body using javascript (if available)
-             and if javascript not enabled, we will re-generate the entire page. In both cases it is useful to abstract
-             the body (which is reloaded often) from the header -->
+        <!-- It is useful to abstract the body from the header -->
         <div  id="id-body_main_html" >
         {{ body_main_html }}
         </div>
