--- a/rs/templates/login.html
+++ b/rs/templates/login.html
@@ -191,7 +191,7 @@
     <div class="cl-clear"></div>
 
 
-    <div class="grid_12">
+    <div class="grid_12 cl-main-background">
         <div class="grid_6 alpha cl-center-text cl-text-large-format cl-background-gradient cl-login-text">
             {% if maintenance_soon_warning %}
                 {{ maintenance_soon_warning|safe }}
@@ -329,7 +329,7 @@
 
 
     <div class="cl-clear"></div>
-    <div class="grid_12">
+    <div class="grid_12 cl-main-background">
         <br><br><br><br><br>
 
         <div class="grid_12 alpha omega cl-footer-divider-line"></div>
