--- a/rs/templates/user_main_helpers/menubar.html
+++ b/rs/templates/user_main_helpers/menubar.html
@@ -87,7 +87,34 @@
                 </ul>
             </li>
 
+            <li class="top">
+                <a href="#"
+                class="top_link">
+                <span class="down">
+                TESTING
+                {% if primary_user_presentation_data_fields.owner_message_count %}
+                    [{{ primary_user_presentation_data_fields.owner_message_count }} {% trans "unread" %}]
+                {% endif %}
+                </span></a>
+                <ul class="sub">
+                    <li>
+                        <a href="#nogo29" class="fly">Sales</a>
+                        <ul>
+                            <li><a href="#">aaaaaa</a></li>
+                            <li><a href="#">bbbbbbbbbb</a></li>
 
+                        </ul>
+                    </li>
+
+			        <li>
+                        <a href="#" class="fly">sub2</a>
+                        <ul>
+                            <li><a href="#">aaaaaa</a></li>
+                            <li><a href="#">bbbbbbbbbb</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
     
             <li class="top">
                 <a href="{% url show_profile_views %}"
